<?xml version="1.0"?>
<package>
  <name>libcsm</name>
  <version>2013.03.26</version>
  <description>Package for Andrea Censi's canonical scan matcher</description>

  <maintainer email="swirth@willowgarage.com">Stephan Wirth</maintainer>
  <license>LGPLv3</license>

  <run_depend>catkin</run_depend>
  <buildtool_depend>cmake</buildtool_depend>
  <build_depend>libgsl</build_depend>
  <run_depend>libgsl</run_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
