<?xml version="1.0"?>
<package>
  <name>urdfdom</name>
  <version>0.2.8</version>
  <description>A library to access URDFs using the DOM model.</description>
  <maintainer email="hsu@osrfoundation.org">John Hsu</maintainer>
  <maintainer email="isucan@willowgarage.com">Ioan Sucan</maintainer>

  <license>BSD</license>

  <author>Wim Meeussen</author>
  <author>John Hsu</author>
  <url type="website">http://ros.org/wiki/urdf</url>
  <url type="bugtracker">https://github.com/ros/urdfdom/issues</url>
  <url type="repository">https://github.com/ros/urdfdom</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>console_bridge</build_depend>
  <build_depend>tinyxml</build_depend>
  <build_depend version_gte="0.2.3">urdfdom_headers</build_depend>

  <run_depend>boost</run_depend>
  <run_depend>catkin</run_depend>
  <run_depend>console_bridge</run_depend>
  <run_depend>tinyxml</run_depend>
  <run_depend version_gte="0.2.3">urdfdom_headers</run_depend>
</package>
