<?xml version="1.0"?>
<package>
  <name>urdfdom_py</name>
  <version>0.2.9</version>
  <description>A library to access URDFs using the DOM model.</description>
  <maintainer email="isucan@willowgarage.com">Ioan Sucan</maintainer>

  <license>BSD</license>

  <author>Thomas Moulard</author>
  <author>David Lu</author>
  <author>Kelsey Hawkins</author>
  <author>Antonio El Khoury</author>
  <author>Eric Cousineau</author>

  <url type="website">http://ros.org/wiki/urdf</url>
  <url type="bugtracker">https://github.com/ros/urdfdom/issues</url>
  <url type="repository">https://github.com/ros/urdfdom</url>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>python-catkin-pkg</buildtool_depend>  

  <build_depend>python</build_depend>

  <run_depend>catkin</run_depend>
  <run_depend>python</run_depend>
  <run_depend>python-lxml</run_depend>
  
</package>
