<package>
  <name>libccd</name>
  <version>2.0.0</version>
  <description>libccd is library for collision detection between two convex shapes.</description>
  <author email="danfis@danfis.cz">Daniel Fiser</author>
  <maintainer email="isucan@google.com">Ioan Sucan</maintainer>
  <license>BSD</license>

  <url>http://libccd.danfis.cz/</url>

  <buildtool_depend>cmake</buildtool_depend>
  
  <export>
    <build_type>cmake</build_type>
  </export>

</package>
