<?xml version="1.0"?>
<package>
  <name>libuvc</name>
  <version>0.0.5</version>
  <description>USB Video Class driver library</description>

  <maintainer email="ken@tossell.net">Ken Tossell</maintainer>
  <license>BSD</license>

  <run_depend>catkin</run_depend>
  <buildtool_depend>cmake</buildtool_depend>
  <build_depend>libusb-1.0-dev</build_depend>
  <run_depend>libusb-1.0-dev</run_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
