<?xml version="1.0"?>
<package>
  <name>sbpl</name>
  <version>1.1.4</version>
  <description>Search-based planning library (SBPL).</description>
  <maintainer email="isucan@willowgarage.com">Ioan Sucan</maintainer>
  <license>BSD</license>

  <url type="website">http://http://sbpl.net</url>
  <url type="bugtracker">https://github.com/sbpl/sbpl/issues</url>
  <url type="repository">https://github.com/sbpl/sbpl</url>

  <author>Search-Based Planning Lab</author>

  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>cmake</build_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
